One more change for fixing overflow issue, and adding some new test data

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -8,11 +8,12 @@ body {
   padding: 20px;
   margin: 10px;
   width: 350px;
-  height: 350px;
+  height: 420px;
   cursor: pointer;
   display: inline-block;
   position: relative;
   transition: 0.5s ease-in-out;
+  overflow: hidden;
 }
 
 div.postObj:hover {
